Changed from SoundSwitcher to AudioSwitcher. Removed Serilog reference. Added support for Windows Notificaiton Center. Added adjust volume level for active interface.

--- a/WindowsRestAPI/App.config
+++ b/WindowsRestAPI/App.config
@@ -23,6 +23,12 @@
             <setting name="StartMinimized" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MessageBox" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="NotificationCenter" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WindowsRestAPI.Properties.Settings>
         <WindowsFormsApp1.Properties.Settings>
             <setting name="HostIP" serializeAs="String">
