SSL/HTTPS support. Basic Authentication.
Automatically detects locale and sets encoding.

System tray context menu added.

--- a/WindowsRestAPI/App.config
+++ b/WindowsRestAPI/App.config
@@ -12,7 +12,7 @@
     <userSettings>
         <WindowsRestAPI.Properties.Settings>
             <setting name="HostIP" serializeAs="String">
-                <value>localhost</value>
+                <value>+</value>
             </setting>
             <setting name="Port" serializeAs="String">
                 <value>1234</value>
@@ -28,6 +28,18 @@
             </setting>
             <setting name="NotificationCenter" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="Authentication" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="HTTPS" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value>default</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>pa$$w0rd</value>
             </setting>
         </WindowsRestAPI.Properties.Settings>
         <WindowsFormsApp1.Properties.Settings>
